Bug 1583238 - Check if ImageBitmap was closed in WriteStructuredClone.